Finalizando consumo da API no front, adicionando pokemon no menu

--- a/PokemonWebApp/Pages/Pokemon.cshtml
+++ b/PokemonWebApp/Pages/Pokemon.cshtml
@@ -3,9 +3,23 @@
 @{
 }
 
-<div class="text-center">
-    @foreach(var data in Model.Pokemons)
-            {
-                <p>@Html.DisplayFor(modelItem => data.nome)</p>
-            }
+<div class="container">
+    <h1 class="text-center">Lista de Pokemons</h1>
+    <section class="d-flex">
+        @foreach (var data in Model.Pokemons)
+
+        {
+            <div class="Pokemon-picture">
+                <img src="@Html.DisplayFor(modelItem => data.image)"
+                     alt="Imagem do @Html.DisplayFor(modelItem => data.nome)" />
+            </div>
+            <div class="pokemon-info">
+                <h1>Nome: @Html.DisplayFor(modelItem => data.nome)</h1>
+                <h2>Id: @Html.DisplayFor(modelItem => data.ID)</h2>
+                <h3>Tipo: @Html.DisplayFor(modelItem => data.tipo)</h3>
+                <h3>Peso: @Html.DisplayFor(modelItem => data.peso)</h3>
+                <h3>Altura: @Html.DisplayFor(modelItem => data.altura)</h3>
+            </div>
+        }
+    </section>
 </div>
