--- a/PokemonWebApp/Pages/Pokemons/Index.cshtml
+++ b/PokemonWebApp/Pages/Pokemons/Index.cshtml
@@ -23,6 +23,9 @@
                 <h3>Peso: @Html.DisplayFor(modelItem => data.peso)</h3>
                 <h3>Altura: @Html.DisplayFor(modelItem => data.altura)</h3>
             </div>
+            <a class="btn btn-info" 
+               asp-page="/Pokemons/Detail" 
+               asp-route-id="@data.ID">Detalhes</a>
         }
     </section>
 </div>
