--- a/PokemonWebApp/Pages/Pokemons/Detail.cshtml
+++ b/PokemonWebApp/Pages/Pokemons/Detail.cshtml
@@ -30,10 +30,10 @@
     <div class="col-md-6">
         <h3>Velocidade: @Html.DisplayFor(model => Model.Pokemon.velocidade)</h3>
     </div>
-    <div class="col-md-6">
-        <a class="btn btn-outline-primary">Editar</a>
-    </div>
-    <div class="col-md-6">
-        <a class="btn btn-outline-danger">Deletar</a>
-    </div>
+</div>
+<div class="row">
+    <a class="btn btn-outline-primary"
+       asp-page="/Pokemons/Edit"
+       asp-route-id="@Model.Pokemon.ID">Editar</a>
+    <a class="btn btn-outline-danger">Deletar</a>
 </div>
